FIX: Aligned title with the transition blurb

--- a/src/styles/Miscellaneous.module.css
+++ b/src/styles/Miscellaneous.module.css
@@ -1,5 +1,28 @@
-.transition {
+.transitionBlurb {
     position: relative;
     width: 100vw;
     height: calc(var(--transition-blurb-aspect-ratio) * 100vw);
+}
+
+.transitionBlurbTitleBlock{
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    position: absolute;
+    bottom: 25%;
+    left: 5%;
+}
+
+.transitionBlurbTitle{
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+
+.transitionBlurbSubtitle{
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
 }
